--- a/app/src/main/res/layout/citites_weather_card.xml
+++ b/app/src/main/res/layout/citites_weather_card.xml
@@ -4,10 +4,11 @@
     xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     card_view:cardCornerRadius="4dp">
 
 <android.support.v7.widget.CardView
-    android:id="@+id/cardViewWeatherCard"
+    android:id="@+id/id_WeatherCard"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:foreground="?attr/selectableItemBackground"
@@ -20,6 +21,7 @@
     android:transitionName="weatherCardTransition">
 
     <android.support.constraint.ConstraintLayout
+        android:background="@drawable/card_bg_gradient"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -32,13 +34,16 @@
             android:layout_marginTop="16dp"
             android:text="@string/default_city"
             android:textSize="30sp"
-            android:textStyle=""
+            android:fontFamily="serif"
+            android:textStyle="normal"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_card_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="serif"
+            android:textStyle="normal"
             android:text="@string/app_name"
             app:layout_constraintStart_toStartOf="@id/tv_card_city_name"
             app:layout_constraintTop_toBottomOf="@id/tv_card_city_name"/>
@@ -55,9 +60,10 @@
             android:id="@+id/tv_card_max_temp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-light"
+            android:textStyle="normal"
             android:textSize="17sp"
             android:text="45"
-            android:fontFamily="sans-serif-condensed-light"
             app:layout_constraintEnd_toEndOf="@id/tv_card_city_name"
             app:layout_constraintTop_toBottomOf="@id/tv_card_description"/>
 
@@ -65,9 +71,10 @@
             android:id="@+id/tv_card_min_temp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-light"
+            android:textStyle="normal"
             android:textSize="17sp"
             android:text="23"
-            android:fontFamily="sans-serif-condensed-light"
             app:layout_constraintEnd_toEndOf="@id/tv_card_max_temp"
             app:layout_constraintTop_toBottomOf="@id/tv_card_max_temp"/>
 
@@ -75,7 +82,7 @@
             android:id="@+id/tv_card_current_temp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-condensed-light"
+            android:fontFamily="sans-serif-light"
             android:textStyle="normal"
             android:textSize="40sp"
             android:text="90"
