--- a/app/src/main/res/layout/city_list_item.xml
+++ b/app/src/main/res/layout/city_list_item.xml
@@ -16,9 +16,7 @@
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginTop="1dp"
-        card_view:cardCornerRadius="4dp"
-        android:transitionName="weatherCardTransition">
-
+        card_view:cardCornerRadius="4dp">
 
     <TextView
         android:layout_width="match_parent"
