--- a/app/src/main/res/layout/main_view_layout.xml
+++ b/app/src/main/res/layout/main_view_layout.xml
@@ -51,11 +51,12 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_city_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:layoutManager="LinearLayoutManager"
         tools:context=".MainActivity"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintEnd_toEndOf="parent"
-        android:fitsSystemWindows="true"
+        android:fitsSystemWindows="false"
         app:layout_constraintStart_toStartOf="parent"/>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
