--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@android:color/white</item>
+        <item name="android:windowContentTransitions">true</item>
     </style>
     <style name="AppTheme.PopupOverlay">
         <item name="colorPrimary">@color/colorPrimary</item>
