--- a/app/src/main/res/layout/main_view_layout.xml
+++ b/app/src/main/res/layout/main_view_layout.xml
@@ -56,7 +56,7 @@
         tools:context=".MainActivity"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintEnd_toEndOf="parent"
-        android:fitsSystemWindows="false"
+        android:fitsSystemWindows="true"
         app:layout_constraintStart_toStartOf="parent"/>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
